2005-11-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/ppp.cdl: Require CYGPKG_POSIX_CLOCKS not *_TIMERS

2005-10-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/ppp.cdl: Require CYGPKG_POSIX_TIMERS
	* src/sys-ecos.c (gettimeofday): Removed, now get it from POSIX

2005-07-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ppp_io.c (cyg_ppp_pppread): caddrt_t to stop compiler warnings.
	* src/cbcp.c (cbcp_recvack, cbcp_recvreq): u_char to stop compiler
	warnigs
	* src/sys-ecos.c (set_up_tty): 
	* include/pppd.h: Remove incorrect declaration of ifunit which
	the compiler complains about.

2005-06-07	Matt Jerdonek <maj1224@yahoo.com>

	* src/ipcp.c:
	* include/ipcp.h: Added code to support RFC 1877 (IPCP
	  Extension for DNS) for client operation.
	* src/sys-ecos.c:
	* include/ppp.h: Added function for application to get
	  the negotiated addresses from the PPP stack.
	* cdl/ppp.cdl: Added option to enable name server negotiation
	  and to automatically configure the DNS resolver with the 
	  negotiated address

2005-04-21	Matt Jerdonek <maj1224@yahoo.com>

	* src/ipcp.c:
	* src/sys-ecos.c: Move ipcp wantoptions initialization from
	  cyg_ppp_options_install to ipcp_init.  This fixes a bug
	  with default route operation introduced in the ACCM 
	  enhancement on 2004-12-1.

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/ppp_up.c: Change the prototype of pr_func to match 
	diag_printf().
	* src/ppp_io.c (ppplogchar): Added missing parameter to diag_printf().

2005-01-16  Matt Jerdonek <maj1224@yahoo.com>
            Andrew Lunn  <andrew.lunn@ascom.ch>
	
	* cdl/ppp.cdl 
	* src/ppp_io.c (pppasyncstart): Conditionally allow the PPP daemon
	to send a start flag at the beginning of very packet. This is not
	required according to RFC 1662, but found to be necessary to
	interwork with some broken implementations.

2004-12-01    Murali Parvathaneni <murkrisp@yahoo.com>

	* include/ppp.h: Add options to negotiate ACCM in
	cyg_ppp_options_t structure.