@@ -1,3 +1,9 @@
+2006-07-18  John Paul King  <john.king@transdatainc.com>
+
+	* src/sys-ecos.c (cyg_ppp_up): Bring semaphore init earlier to avoid
+	race condition if pppd thread is higher priority than the current
+	thread.
+
 2005-11-23  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* cdl/ppp.cdl: Require CYGPKG_POSIX_CLOCKS not *_TIMERS
